--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,36 @@
-<agm-map [latitude]="lat" [longitude]="lng" fullscreenControl=true, mapTypeControl=true>
-  <agm-marker [latitude]="lat" [longitude]="lng"></agm-marker>
+<agm-map [latitude]="lat" [longitude]="lng" mapTypeControl=true>
+  <agm-marker (markerClick)="showPhotoViewer()" [latitude]="lat" [longitude]="lng"> </agm-marker>
 </agm-map>
+
+<div class="overlay" *ngIf="markerClicked">
+  <button id="escButton" type="button" class="overlay-close" (click)="hidePhotoViewer()">Close</button>
+
+  <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="false">
+    <!-- Wrapper for slides -->
+    <div class="carousel-inner">
+      <div class="item active">
+        <img class="img-thumbnail img-wide" src="assets/img_fjords_wide.jpg">
+      </div>
+
+      <!-- TODO Figure out how to set "height=100vh" in css, not as easy as adding a new class like img-wide -->
+      <div class="item">
+        <img class="img-thumbnail" src="assets/test2.jpg" style="height:100vh">
+      </div>
+    
+      <div class="item">
+        <img class="img-thumbnail" src="assets/test3.jpg" style="height:100vh">
+      </div>
+    </div>
+
+    <!-- Left and right controls -->
+    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+      <span class="glyphicon glyphicon-chevron-left"></span>
+      <span class="sr-only">Previous</span>
+    </a>
+    <a class="carousel-control right" href="#myCarousel" data-slide="next">
+      <span class="glyphicon glyphicon-chevron-right"></span>
+      <span class="sr-only">Next</span>
+    </a>
+  </div>
+
+</div>
